- https://github.com/eclipse-syson/syson/issues/1858[#1858] [diagrams] Fix an issue where a new graphical node could be located inside the wrong graphical container.
- https://github.com/eclipse-syson/syson/issues/1859[#1859] [diagrams] Fix an issue where the creation of an `ItemUsage` from an `ActionUsage` or an `ActionDefinition` graphical node was not revealing it.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/1666[#1666] [export] Export `SatisfyRequirementUsage` in textual format.
- https://github.com/eclipse-syson/syson/issues/1653[#1653] [services] Improve service for creating root objects in a document so that it delegates non-SysML scenarios to the default service implementation.
- https://github.com/eclipse-syson/syson/issues/1735[#1735] [diagrams] Improve the performances of the visibility menu actions
- https://github.com/eclipse-syson/syson/issues/1702[#1702] [libraries] Provide a SysON version of the impact analysis tree.
- https://github.com/eclipse-syson/syson/issues/1746[#1746] [diagrams] When attempting to create a redundant `FeatureTyping` between elements which already have one, an informative message is displayed instead.
- https://github.com/eclipse-syson/syson/issues/1766[#1766] [diagrams] Also prevent the creation of redundant `Subsetting`, `Redefinition` and `Subclassifications`
- https://github.com/eclipse-syson/syson/issues/1765[#1765] [diagrams] Allow to create a `SatisfyRequirement` on `PartDefinition` or `PartUsage`.
A new compartment named _satisfy requirements_ has also been added to `PartDefinition` and `PartUsage` graphical nodes in diagrams.
- https://github.com/eclipse-syson/syson/issues/1762[#1762] [diagrams] Increase the default size of nodes.
- https://github.com/eclipse-syson/syson/issues/1752[#1752] [diagrams] In diagrams, hide the node displayed on the top of the diagram if the candidate compartment is not hidden.